--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vite App</title>
+    <style>
+      .p-dialog .p-dialog-footer {
+        text-align: center !important;
+      }
+    </style>
   </head>
   <body>
     <div id="app"></div>
